style: fix z-index

--- a/src/shared/ui/modal/Modal.module.scss
+++ b/src/shared/ui/modal/Modal.module.scss
@@ -21,6 +21,7 @@
   border-radius: 2px;
   box-shadow: hsl(206deg 22% 7% / .35) 0 10px 38px -10px, hsl(206deg 22% 7% / .2) 0 10px 20px -15px;
   transform: translate(-50%, -50%);
+  z-index: 100;
 
   // max-width: 450px;
   // max-height: 85vh;
